[project]
name = "latepredictor-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "haversine>=2.9.0",
    "ipykernel>=7.2.0",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "streamlit-autorefresh>=1.0.1",
    "supabase>=2.30.0",
]
